syntax="proto3";

package api.v1.mycoffeshop.product;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "common.proto";

option go_package = "github.com/mendesbarreto/go-my-coffe-shop/proto/gen";

message ProductDetails {
    string id = 1 [(validate.rules).string = { max_bytes: 12 }];
    string name = 2;
    float price = 3;
}

message ListProductsRequest {
  repeated string ids = 1;
}

// TODO: Add pagination to the response
message ListProductsResponse {
  repeated ProductDetails items = 1;
}


service ProductService {
 rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/v1/product"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get a list of products"
      tags: "Product"
    };
  };
}
